correction problème shadow du header invisible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,12 +87,14 @@
   }
 }
 header {
+  position: sticky;
+  position: -webkit-sticky;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 60px;
-  box-shadow: 0 4px 8px -4px rgba(0, 0, 0, 0.8);
-  z-index: 2;
+  box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 header .icon {
   width: 160px;
@@ -168,11 +170,6 @@ body a {
   font-family: "Shrikhand", cursive;
 }
 
-main {
-  display: flex;
-  flex-direction: column;
-}
-
 .location {
   display: flex;
   justify-content: center;
@@ -180,7 +177,6 @@ main {
   width: 100%;
   height: 50px;
   background-color: #EAEAEA;
-  z-index: 1;
 }
 .location i {
   padding: 0 15px;
